--- a/styles.css
+++ b/styles.css
@@ -11,8 +11,8 @@ h1 {
     text-align: center;
     font-size: 2.5em;
     font-weight: 700; /* Ensures bold font across devices */
-    color: #222; /* Darker gray for emphasis */
-    text-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
+    color: #333; /* Darker gray for emphasis */
+    /* text-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1); Subtle shadow for depth */
     margin-bottom: 20px;
 }
 
@@ -76,7 +76,7 @@ h1 a:hover {
 }
 
 .pagination button {
-    margin: 0 5px;
+    margin: 15px;
     padding: 5px 10px;
     background-color: #e9ecef;
     border: 1px solid #ccc;
