--- a/styles.css
+++ b/styles.css
@@ -63,10 +63,12 @@ h1 a:hover {
 
 /* ISO Date */
 .iso-date {
+    display: block; /* Make it a block-level element */
     margin-top: 10px;
     color: #555;
-    font-size: 8px;
+    font-size: 12px; /* Increase font size */
     line-height: 1.5;
+    text-align: right; /* Align text to the right */
 }
 
 /* Pagination Styling */
