--- a/styles.css
+++ b/styles.css
@@ -165,10 +165,9 @@ a:focus, button:focus, select:focus {
     font-size: 14px;
 }
 
-.github-button {
+.github-button, .total-article-button {
     position: fixed;
     bottom: 20px;
-    left: 20px; /* Change from right to left */
     background-color: #24292e;
     color: #fff;
     border: none;
@@ -182,11 +181,19 @@ a:focus, button:focus, select:focus {
     transition: background-color 0.3s ease;
 }
 
-.github-button:hover {
+.github-button {
+    left: 20px; /* Position on the left */
+}
+
+.total-article-button {
+    right: 20px; /* Position on the right */
+}
+
+.github-button:hover, .total-article-button:hover {
     background-color: #444d56;
 }
 
-.github-button img {
+.github-button img, .total-article-button img {
     margin-right: 8px;
     width: 20px;
     height: 20px;
