--- a/stylish.css
+++ b/stylish.css
@@ -103,11 +103,11 @@ body.dark-mode #darkModeToggle {
       max-width: 100%; /* Ensure content fits within screen */
   }
 
-  #feed-list li {
+  /* #feed-list li {
     border-bottom: 1px solid #b4bcc2 !important;
     padding-bottom: 0.5em;
     margin-bottom: 0.5em;
-  }
+  } */
 
   #feed-list li:hover {
     border-radius: 5px !important; /* Rounded corners for aesthetics */
@@ -132,11 +132,11 @@ body.dark-mode #darkModeToggle {
   } ;
 }
 
-#feed-list li {
+/* #feed-list li {
   border-bottom: 1px solid #b4bcc2 !important;
   padding-bottom: 0.5em;
   margin-bottom: 0.5em;
-}
+} */
 
 #feed-list li:hover {
   border-radius: 2px !important; /* Rounded corners for aesthetics */
